--- a/index.html
+++ b/index.html
@@ -838,6 +838,7 @@ Create an array of question objects with:
 6. Make sure all the questions are written in full , no skipping 
 7. Whenever " Read the given passage " is mentioned, make sure to write the entire passage as well 
 8. If any word is underlined in a question, make sure you underline it in the test too
+9. Questions must be in an array format 
 
 <b>Handle:</b>
 
