--- a/index.html
+++ b/index.html
@@ -1844,3 +1844,6 @@ Create an array of question objects with:
     </script>
 </body>
 </html>
+
+//Copyright © 2025 shauryasuyal. All rights reserved.
+//This code is proprietary and may not be copied, modified, or distributed without express written permission from the author.
