--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
             </div>
             
              
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/D_GvCYSi3po" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="display: block; margin: 20px auto 0 auto; border-radius: 8px;"></iframe>
+            <iframe width="560" height="315" src="https://youtu.be/8zcWOwg_NU0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="display: block; margin: 20px auto 0 auto; border-radius: 8px;"></iframe>
             <button id="get-started-btn" class="get-started-btn">Get Started Now</button>
         </div>
 
