--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
             </div>
             
              
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=8zcWOwg_NU0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="display: block; margin: 20px auto 0 auto; border-radius: 8px;"></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8zcWOwg_NU0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="display: block; margin: 20px auto 0 auto; border-radius: 8px;"></iframe>
             <button id="get-started-btn" class="get-started-btn">Get Started Now</button>
         </div>
 
@@ -1840,10 +1840,11 @@ Create an array of question objects with:
 
             // Start timer
             startTimer();
+            //Copyright © 2025 shauryasuyal. All rights reserved.
+            //This code is proprietary and may not be copied, modified, or distributed without express written permission from the author.
+
         }
     </script>
 </body>
 </html>
 
-//Copyright © 2025 shauryasuyal. All rights reserved.
-//This code is proprietary and may not be copied, modified, or distributed without express written permission from the author.
