--- a/index.html
+++ b/index.html
@@ -1842,7 +1842,8 @@ Create an array of question objects with:
             startTimer();
             //Copyright © 2025 shauryasuyal. All rights reserved.
             //This code is proprietary and may not be copied, modified, or distributed without express written permission from the author.
-
+            //Special thanks to Sankrita Tiwari for the idea.
+    
         }
     </script>
 </body>
